window: Ignore input_set_pointer_image() if we don't have a pointer

https://bugs.freedesktop.org/show_bug.cgi?id=55782